cmake_minimum_required(VERSION 3.24)
project(Lab6Ex1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab6Ex1 main.cpp cmake-build-debug/Car.h cmake-build-debug/Circuit.cpp cmake-build-debug/Circuit.h cmake-build-debug/Weather.h cmake-build-debug/BMW.cpp cmake-build-debug/BMW.h cmake-build-debug/Volvo.cpp cmake-build-debug/Volvo.h cmake-build-debug/Fiat.cpp cmake-build-debug/Fiat.h cmake-build-debug/Seat.cpp cmake-build-debug/Seat.h cmake-build-debug/RangeRover.cpp cmake-build-debug/RangeRover.h cmake-build-debug/Skoda.cpp cmake-build-debug/Skoda.h)
